--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
 author: Keanna Salter
-title: 
+title: Manifesting My New Career!!!
 header-img: img/home-bg.png
 email: keannasalter91@gmail.com
 copyright_name: Keanna Salter
 description: > # this means to ignore newlines until "baseurl:"
-  
+  Software Engineering
 baseurl: "" # the subpath of your site, e.g. /blog
 twitter_username: 
 github_username:  keannas
